--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@0xsquid/sdk": "1.4.1",
     "@rainbow-me/rainbowkit": "1.0.0",
+    "ethers": "5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "viem": "0.3.22",
